# derive

./: .env.example  .gitignore  PROJECT_STATE.md  README.md  pyproject.toml
spike/: validate_test_case.py  verify_anthropic.py
spike/test_cases/: cm_shm_001.json  em_wave_001.json
